# multidimensional-self-expanding-agent

./: 9DA_Proprietary_License.md  LICENSE  README.md  main.py  pyproject.toml
core/audit/: continuity.py  counterfactual.py  self_evaluation.py
core/awareness/: dynamics.py  field.py  recursion.py  state.py
core/docs/: demo.html
core/emergence/: agent.py  dissolution.py  generation.py
core/examples/: awareness_continuum_example.py
core/governance/: ethics.py  explainability.py  invariants.py
core/knowledge/: feedback.py  lineage.py  memory.py
core/llm/: adapter.py  config.py
demos/: counterfactual_backend.py  demo_emergence.html  demo_orchestrator.py  emergence_backend.py
docs/: 9da-live-demo.html  README.md  demo.html  demo_counterfactual.html  demo_nine_fields.html  demo_nine_fields.md  demo_nine_fields.py  demo_orchestrator.py  demo_phase_space.html  demo_viewer.html  phase_space_backend.py
